--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,19 @@
 # DeathCast Environment Variables
 
-# Supabase Configuration
+# Supabase Configuration (REQUIRED)
 VITE_SUPABASE_URL=https://your-project.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key
 
-# ElevenLabs Voice AI
-VITE_ELEVENLABS_KEY=WORLDSLARGESTHACKATHON-9de6906b
+# ElevenLabs Voice AI (REQUIRED)
+VITE_ELEVENLABS_KEY=your-elevenlabs-api-key
 
-# Algorand Blockchain
+# Algorand Blockchain (OPTIONAL)
 VITE_ALGORAND_API_KEY=your-algorand-key
 
-# RevenueCat (for monetization)
-VITE_REVENUECAT_IOS_KEY=your-ios-key
-VITE_REVENUECAT_ANDROID_KEY=your-android-key
+# RevenueCat (OPTIONAL)
+VITE_REVENUECAT_API_KEY=your-revenuecat-key
 
 # App Configuration
 VITE_APP_NAME=DeathCast
 VITE_APP_VERSION=1.0.0
-VITE_APP_ENVIRONMENT=development
+VITE_APP_ENVIRONMENT=production
